bug fixes recipe update